# Playwright-with-Python-course-1

./: README.md  conftest.py  playwright_codegen.py  pyproject.toml  test_todo.py
course_from_stepic/: Actions.py  Assertions.py  Debug.py  Locators.py  Mocking.py
playwrightTutorial-files/tests_ui_layout/: test_home_page_layout.py
