[tool.poetry]
name = "playwright-with-python-course-1"
version = "0.1.0"
description = ""
authors = ["Alexander_Levkin <levkin.a@promail366.com>"]
readme = "README.md"
packages = [{include = "playwright_with_python_course_1"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
