[tool.poetry]
name = "playwright-with-python-course-1"
version = "0.1.0"
description = ""
authors = ["Alexander_Levkin <levkin.a@promail366.com>"]
readme = "README.md"
packages = [{include = "playwright_with_python_course_1"}]

[tool.poetry.dependencies]
python = "^3.11"
playwright = "^1.33.0"
pytest = "^7.3.1"
pytest-playwright = "^0.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
